tests/baselines/reference/inferContextualTypePredicates1.errors.txt
inferContextualTypePredicates1.ts(13,26): error TS2345: Argument of type '(item: Foo | Bar) => false' is not assignable to parameter of type '(a: Foo | Bar) => a is Foo | Bar'.
  Signature '(item: Foo | Bar): false' must be a type predicate.
inferContextualTypePredicates1.ts(14,26): error TS2345: Argument of type '(item: Foo | Bar) => true' is not assignable to parameter of type '(a: Foo | Bar) => a is Foo | Bar'.
  Signature '(item: Foo | Bar): true' must be a type predicate.
inferContextualTypePredicates1.ts(17,7): error TS2322: Type '(a: string | null, b: string | null) => boolean' is not assignable to type '(a: string | null, b: string | null) => b is string'.
  Signature '(a: string | null, b: string | null): boolean' must be a type predicate.


==== inferContextualTypePredicates1.ts (3 errors) ====
    type Foo = { type: "foo"; foo: number };
    type Bar = { type: "bar"; bar: string };
    
    declare function skipIf<A, B extends A>(
      as: A[],
      predicate: (a: A) => a is B,
    ): Exclude<A, B>[];
    
    declare const items: (Foo | Bar)[];
    
    const r1 = skipIf(items, (item) => item.type === "foo"); // ok
    const r2 = skipIf(items, (item) => item.type === "foo" || item.type === "bar"); // ok
    const r3 = skipIf(items, (item) => false); // error
                             ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(item: Foo | Bar) => false' is not assignable to parameter of type '(a: Foo | Bar) => a is Foo | Bar'.
!!! error TS2345:   Signature '(item: Foo | Bar): false' must be a type predicate.
    const r4 = skipIf(items, (item) => true); // error
                             ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(item: Foo | Bar) => true' is not assignable to parameter of type '(a: Foo | Bar) => a is Foo | Bar'.
!!! error TS2345:   Signature '(item: Foo | Bar): true' must be a type predicate.
    
    const pred1: (a: string | null, b: string | null) => b is string = (a, b) => typeof b === 'string'; // ok
    const pred2: (a: string | null, b: string | null) => b is string = (a, b) => typeof a === 'string'; // error
          ~~~~~
!!! error TS2322: Type '(a: string | null, b: string | null) => boolean' is not assignable to type '(a: string | null, b: string | null) => b is string'.
!!! error TS2322:   Signature '(a: string | null, b: string | null): boolean' must be a type predicate.
    